# hierro

./: .gitignore  .gitmodules  .gitmodules.orig  CMakeLists.txt  CMakeLists_BACKUP_70315.txt  CMakeLists_LOCAL_70315.txt  CMakeLists_REMOTE_70315.txt  justfile
assets/shader/block/: block.frag  block.vert  fragment.glsl  vertex.glsl
examples/block/: justfile
examples/block/src/: main.cpp
examples/button/src/: main.cpp
examples/form/: justfile
examples/form/src/: main.cpp
examples/input/: CMakeLists.txt  justfile
examples/input/src/: main.cpp
examples/picture/: justfile
examples/picture/src/: main.cpp
examples/text/: justfile
examples/text/src/: main.cpp
examples/video/src/: main.cpp
include/: color.h
include/component/: block.h
include/hierro/: app.h  app.hpp  err.h  error.h  error.hpp  event.hpp  hierro.hpp  shader.hpp  window.hpp
include/hierro/app/: app.hpp  window.hpp
include/hierro/backend/: backend.hpp  glfw.hpp  sdl.hpp
include/hierro/component/: block.h  block.hpp  component.h  component.hpp  label.h  label.hpp  text.h  text.hpp
include/hierro/event/: event.hpp  keycode.hpp  keystate.hpp
include/hierro/shader/: fragment.h  placebo.hpp  shader.hpp
include/hierro/shader/block/: fragment.h  fragment.hpp  vertex.h  vertex.hpp
include/hierro/shader/text/: fragment.hpp  vertex.hpp
include/hierro/utils/: color.h  data.hpp  error.hpp  frame_counter.hpp  log.h  log.hpp  shader.hpp  texture.hpp
include/hierro/widget/: button.hpp  input.hpp  video.hpp
include/shader/: vertex.h
src/: app.cpp  color.cpp  err.cpp  error.cpp  shader.cpp
src/app/: app.cpp  callback.cpp
src/backend/: glfw.cpp  sdl.cpp
src/component/: block.cpp  text.cpp
src/component/text/: label.cpp  text.cpp  text_generater.cpp
src/event/: event.cpp
src/shader/: placebo.cpp  shader.cpp
src/utils/: color.cpp  shader.cpp
src/widget/: button.cpp  input.cpp  video.cpp
tests/: CMakeLists.txt  justfile
tests/block/src/: main.cpp
tests/src/: main.cpp
tests/text_generate/: justfile
tests/text_generate/src/: main.cpp
